--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -6,9 +6,11 @@
     <string name="error">Fehler</string>
     <string name="wait">Bitte warten</string>
     <string name="add">Einfügen</string>
+    <string name="start">Starten</string>
     <string name="edit">Bearbeiten</string>
     <string name="save_changes">Änderungen speichern</string>
     <string name="delete">Löschen</string>
+    <string name="options">Optionen</string>
     <string name="welcome_collection">Willkommen. Nun ist es an der Zeit, eine neue Sammlung zu erstellen oder ein Sammlungs-Backup zu importieren.</string>
     <string name="welcome_pack">Willkommen. Nun ist es an der Zeit, einen neuen Stapel zu erstellen.</string>
     <string name="welcome_card">Noch sind keine Karten in diesem Stapel vorhanden.</string>
@@ -19,6 +21,7 @@
     <string name="import_warn">Nicht alle Daten konnten importiert werden</string>
     <string name="import_okay">Erfolgreich beendet</string>
     <string name="edit_collection">Sammlung bearbeiten</string>
+    <string name="import_ignore_duplicates">Gleichnamige und namenslose Sammlungen überspringen</string>
     <string name="edit_pack">Stapel bearbeiten</string>
     <string name="edit_card">Karte bearbeiten</string>
     <string name="delete_pack_with_cards">Dieser Stapel enthält Karten. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Karten gelöscht. Trotzdem löschen?</string>
