--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -15,7 +15,7 @@
     <string name="welcome_pack">Willkommen. Nun ist es an der Zeit, einen neuen Stapel zu erstellen.</string>
     <string name="welcome_card">Noch sind keine Karten in diesem Stapel vorhanden.</string>
     <string name="all_cards">Alle Karten</string>
-    <string name="export_all">Alle Sammlungen als Backup exportieren</string>
+    <string name="export_all">Sammlungen als Backup exportieren</string>
     <string name="export_cards">Sammlung als Backup exportieren</string>
     <string name="import_cards">Sammlung(en) von Backup importieren</string>
     <string name="import_warn">Nicht alle Daten konnten importiert werden</string>
