--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="licenses">Lizenzen</string>
+    <string name="settings">Einstellungen</string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
     <string name="error">Fehler</string>
+    <string name="error_values">Fehler – Haben Sie alle erforderlichen Felder ausgefüllt?</string>
     <string name="wait">Bitte warten</string>
     <string name="add">Einfügen</string>
     <string name="start">Starten</string>
     <string name="edit">Bearbeiten</string>
+    <string name="optional">%1$s (optional)</string>
     <string name="save_changes">Änderungen speichern</string>
+    <string name="discard_changes">Änderungen verwerfen</string>
     <string name="delete">Löschen</string>
     <string name="options">Optionen</string>
     <string name="welcome_collection">Willkommen. Nun ist es an der Zeit, eine neue Sammlung zu erstellen oder ein Sammlungs-Backup zu importieren.</string>
@@ -48,4 +52,5 @@
     <string name="card_minus">Falsch gedacht</string>
     <string name="card_known">Fortschritt</string>
     <string name="color">Farbe</string>
+    <string name="settings_default_sort">Kartenliste: Standard-Sortierung</string>
 </resources>
