--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,10 +25,10 @@
     <string name="import_cards">Import collection(s) from backup</string>
     <string name="import_warn">Import not complete</string>
     <string name="import_okay">Import success</string>
-    <string name="import_mode">on same-named and nameless collections:</string>
-    <string name="import_mode_skip">Skip import</string>
-    <string name="import_mode_duplicates">Create new entry</string>
-    <string name="import_mode_integrate">Integrate to first same-named</string>
+    <string name="import_mode">Same-named collections handling:</string>
+    <string name="import_mode_skip">Do not import</string>
+    <string name="import_mode_duplicates">Add new same-named entry</string>
+    <string name="import_mode_integrate">Merge with first same-named collection</string>
     <string name="edit_collection">Edit collection</string>
     <string name="edit_pack">Edit pack</string>
     <string name="edit_card">Edit card</string>
@@ -45,7 +45,7 @@
     <string name="change_front_back">show back</string>
     <string name="change_back_front">show front</string>
     <string name="sort_random">sort random</string>
-    <string name="sort_normal">sort normal</string>
+    <string name="sort_normal">sort by progress</string>
     <string name="sort_alphabetical">sort alphabetical</string>
     <string name="collection_details">collection details</string>
     <string name="pack_details">pack details</string>
