--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -18,6 +18,7 @@
     <string name="welcome_collection">Willkommen. Nun ist es an der Zeit, eine neue Sammlung zu erstellen oder ein Sammlungs-Backup zu importieren.</string>
     <string name="welcome_pack">Willkommen. Nun ist es an der Zeit, einen neuen Stapel zu erstellen.</string>
     <string name="welcome_card">Noch sind keine Karten in diesem Stapel vorhanden.</string>
+    <string name="all_packs">Alle Stapel</string>
     <string name="all_cards">Alle Karten</string>
     <string name="export_all">Sammlungen als Backup exportieren</string>
     <string name="export_cards">Sammlung als Backup exportieren</string>
@@ -25,14 +26,17 @@
     <string name="import_warn">Nicht alle Daten konnten importiert werden</string>
     <string name="import_okay">Erfolgreich beendet</string>
     <string name="edit_collection">Sammlung bearbeiten</string>
-    <string name="import_mode">Handhabung von namensgleichen Sammlungen:</string>
+    <string name="import_mode">Handhabung von gleichnamigen Sammlungen:</string>
     <string name="import_mode_skip">Nicht importieren</string>
-    <string name="import_mode_duplicates">Als neuen namensgleichen Eintrag hinzufügen</string>
-    <string name="import_mode_integrate">Mit erster namensgleichen Sammlung zusammenführen</string>
+    <string name="import_mode_duplicates">Als neuen gleichnamigen Eintrag hinzufügen</string>
+    <string name="import_mode_integrate">Mit erster gleichnamigen Sammlung zusammenführen</string>
     <string name="edit_pack">Stapel bearbeiten</string>
     <string name="edit_card">Karte bearbeiten</string>
     <string name="delete_pack_with_cards">Dieser Stapel enthält Karten. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Karten gelöscht. Trotzdem löschen?</string>
     <string name="delete_collection_with_packs">Diese Sammlung enthält Stapel. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Stapel samt Karten gelöscht. Trotzdem löschen?</string>
+    <string name="move">Verschieben</string>
+    <string name="move_pack">Stapel in andere Sammlung verschieben</string>
+    <string name="move_card">Karte in anderen Stapel verschieben</string>
     <string name="collection_or_pack_name">Name</string>
     <string name="collection_or_pack_desc">Beschreibung</string>
     <string name="new_collection">Neue Sammlung</string>
@@ -45,7 +49,7 @@
     <string name="change_back_front">Vorderseite anzeigen</string>
     <string name="sort_random">Zufallssortierung</string>
     <string name="sort_normal">Sortierung nach Lernfortschritt</string>
-    <string name="sort_alphabetical">Alphabetische Sortierung</string>
+    <string name="sort_alphabetical">Alphabetische Sortierung nach Vorderseite</string>
     <string name="collection_details">Sammlungsdetails</string>
     <string name="pack_details">Stapeldetails</string>
     <string name="card_plus">Gewusst</string>
