--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -15,33 +15,38 @@
     <string name="discard_changes">Änderungen verwerfen</string>
     <string name="delete">Löschen</string>
     <string name="options">Optionen</string>
-    <string name="welcome_collection">Willkommen. Nun ist es an der Zeit, eine neue Sammlung zu erstellen oder ein Sammlungs-Backup zu importieren.</string>
-    <string name="welcome_pack">Willkommen. Nun ist es an der Zeit, einen neuen Stapel zu erstellen.</string>
-    <string name="welcome_card">Noch sind keine Karten in diesem Stapel vorhanden.</string>
-    <string name="all_packs">Alle Stapel</string>
-    <string name="all_cards">Alle Karten</string>
-    <string name="export_all">Sammlungen als Backup exportieren</string>
-    <string name="export_cards">Sammlung als Backup exportieren</string>
-    <string name="import_cards">Sammlung(en) von Backup importieren</string>
+    <string name="welcome_collection">Willkommen. Erstellen Sie einen neuen Karteikasten (+) oder importieren Sie ein Karteikasten-Backup (↓).</string>
+    <string name="welcome_pack">Es sind noch keine Kartenstapel in diesem Karteikasten vorhanden.</string>
+    <string name="welcome_pack_create">Erstellen Sie einen neuen Kartenstapel (+).</string>
+    <string name="welcome_card">Es sind noch keine Karteikarten in diesem Kartenstapel vorhanden.</string>
+    <string name="welcome_card_create">Erstellen Sie eine neue Karteikarte (+).</string>
+    <string name="all_packs">Alle Kartenstapel</string>
+    <string name="all_cards">Alle Karteikarten</string>
+    <string name="export_all">Karteikästen als Backup exportieren</string>
+    <string name="export_cards">Karteikasten als Backup exportieren</string>
+    <string name="import_cards">Karteikasten/-kästen von Backup importieren</string>
     <string name="import_warn">Nicht alle Daten konnten importiert werden</string>
     <string name="import_okay">Erfolgreich beendet</string>
-    <string name="edit_collection">Sammlung bearbeiten</string>
-    <string name="import_mode">Handhabung von gleichnamigen Sammlungen:</string>
+    <string name="edit_collection">Karteikasten bearbeiten</string>
+    <string name="import_mode">Handhabung von gleichnamigen Karteikästen:</string>
     <string name="import_mode_skip">Nicht importieren</string>
     <string name="import_mode_duplicates">Als neuen gleichnamigen Eintrag hinzufügen</string>
-    <string name="import_mode_integrate">Mit erster gleichnamigen Sammlung zusammenführen</string>
-    <string name="edit_pack">Stapel bearbeiten</string>
-    <string name="edit_card">Karte bearbeiten</string>
-    <string name="delete_pack_with_cards">Dieser Stapel enthält Karten. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Karten gelöscht. Trotzdem löschen?</string>
-    <string name="delete_collection_with_packs">Diese Sammlung enthält Stapel. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Stapel samt Karten gelöscht. Trotzdem löschen?</string>
+    <string name="import_mode_integrate">Mit erstem gleichnamigen Karteikasten zusammenführen</string>
+    <string name="edit_pack">Kartenstapel bearbeiten</string>
+    <string name="edit_card">Karteikarte bearbeiten</string>
+    <string name="delete_pack_with_cards">Dieser Kartenstapel enthält Karteikarten. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Karteikarten gelöscht. Trotzdem löschen?</string>
+    <string name="delete_collection_with_packs">Dieser Karteikasten enthält Kartenstapel. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Kartenstapel samt Karteikarten gelöscht. Trotzdem löschen?</string>
     <string name="move">Verschieben</string>
-    <string name="move_pack">Stapel in andere Sammlung verschieben</string>
-    <string name="move_card">Karte in anderen Stapel verschieben</string>
+    <string name="move_pack">Kartenstapel in anderen Karteikasten verschieben</string>
+    <string name="move_card">Karteikarte in anderen Kartenstapel verschieben</string>
+    <string name="collection_or_pack_name_format">%2$s %1$s</string>
     <string name="collection_or_pack_name">Name</string>
     <string name="collection_or_pack_desc">Beschreibung</string>
-    <string name="new_collection">Neue Sammlung</string>
-    <string name="new_pack">Neuer Stapel</string>
-    <string name="new_card">Neue Karte</string>
+    <string name="collection_name">des Karteikastens</string>
+    <string name="pack_name">des Kartenstapels</string>
+    <string name="new_collection">Neuer Karteikasten</string>
+    <string name="new_pack">Neuer Kartenstapel</string>
+    <string name="new_card">Neue Karteikarte</string>
     <string name="new_card_front">Vorderseite</string>
     <string name="new_card_back">Rückseite</string>
     <string name="new_card_notes">Notizen</string>
@@ -49,9 +54,9 @@
     <string name="change_back_front">Vorderseite anzeigen</string>
     <string name="sort_random">Zufallssortierung</string>
     <string name="sort_normal">Sortierung nach Lernfortschritt</string>
-    <string name="sort_alphabetical">Alphabetische Sortierung nach Vorderseite</string>
-    <string name="collection_details">Sammlungsdetails</string>
-    <string name="pack_details">Stapeldetails</string>
+    <string name="sort_alphabetical">Alphabetische Sortierung nach Karteikarten-Vorderseite</string>
+    <string name="collection_details">Karteikasten-Details</string>
+    <string name="pack_details">Kartenstapel-Details</string>
     <string name="card_plus">Gewusst</string>
     <string name="card_minus">Falsch gedacht</string>
     <string name="card_known">Fortschritt</string>
@@ -62,7 +67,10 @@
     <string name="search_off">Suche zurücksetzen</string>
     <string name="settings_default_sort">Kartenliste: Standard-Sortierung</string>
     <string name="settings_format">Formatierung</string>
-    <string name="settings_format_cards">Karten Vorder-/Rückseite: Einfache Formatierung</string>
+    <string name="settings_format_cards">Karteikarten-Vorder-/Rückseite: Einfache Formatierung</string>
     <string name="settings_format_cards_info">***Text*** = Fett und kursiv\n**Text** = Fett\n*Text* = Kursiv\n_Text_ = Unterstrichen</string>
-    <string name="settings_format_card_notes">Karten-Notizen: Markdown Unterstützung</string>
+    <string name="settings_format_card_notes">Karteikarten-Notizen: Markdown Unterstützung</string>
+    <string name="settings_ui">Nutzeroberfläche</string>
+    <string name="settings_ui_background_images">Hintergrundbilder anzeigen</string>
+    <string name="settings_ui_increase_font_size">Schriftgröße erhöhen</string>
 </resources>
