--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,33 +16,38 @@
     <string name="discard_changes">discard changes</string>
     <string name="delete">delete</string>
     <string name="options">options</string>
-    <string name="welcome_collection">Welcome. Create a new collection or import a collection backup.</string>
-    <string name="welcome_pack">Welcome. Create a new pack.</string>
-    <string name="welcome_card">There are no cards in this pack.</string>
-    <string name="all_packs">All packs</string>
-    <string name="all_cards">All cards</string>
-    <string name="export_all">Export collections as backup</string>
-    <string name="export_cards">Export collection as backup</string>
-    <string name="import_cards">Import collection(s) from backup</string>
+    <string name="welcome_collection">Welcome. Create a new filing box (+) or import a filing box backup (↓).</string>
+    <string name="welcome_pack">There are no decks in this filing box.</string>
+    <string name="welcome_pack_create">Create a new deck (+).</string>
+    <string name="welcome_card">There are no flashcards in this deck.</string>
+    <string name="welcome_card_create">Create a new flashcard (+).</string>
+    <string name="all_packs">All decks</string>
+    <string name="all_cards">All flashcards</string>
+    <string name="export_all">Export filing boxes as backup</string>
+    <string name="export_cards">Export filing box as backup</string>
+    <string name="import_cards">Import filing box(es) from backup</string>
     <string name="import_warn">Import not complete</string>
     <string name="import_okay">Import success</string>
-    <string name="import_mode">Same-named collections handling:</string>
+    <string name="import_mode">Same-named filing boxes handling:</string>
     <string name="import_mode_skip">Do not import</string>
     <string name="import_mode_duplicates">Add new same-named entry</string>
-    <string name="import_mode_integrate">Merge with first same-named collection</string>
-    <string name="edit_collection">Edit collection</string>
-    <string name="edit_pack">Edit pack</string>
-    <string name="edit_card">Edit card</string>
-    <string name="delete_pack_with_cards">This pack contains cards. If you proceed these cards will also be deleted. Delete anyway?</string>
-    <string name="delete_collection_with_packs">This collection contains packs. If you proceed these packs and their cards will also be deleted. Delete anyway?</string>
+    <string name="import_mode_integrate">Merge with first same-named filing box</string>
+    <string name="edit_collection">Edit filing box</string>
+    <string name="edit_pack">Edit deck</string>
+    <string name="edit_card">Edit flashcard</string>
+    <string name="delete_pack_with_cards">This deck contains flashcards. If you proceed these flashcards will also be deleted. Delete anyway?</string>
+    <string name="delete_collection_with_packs">This filing box contains decks. If you proceed these decks and their flashcards will also be deleted. Delete anyway?</string>
     <string name="move">move</string>
-    <string name="move_pack">move pack to another collection</string>
-    <string name="move_card">move card to another pack</string>
+    <string name="move_pack">move deck to another filing box</string>
+    <string name="move_card">move flashcard to another deck</string>
+    <string name="collection_or_pack_name_format">%2$s %1$s</string>
     <string name="collection_or_pack_name">name</string>
     <string name="collection_or_pack_desc">description</string>
-    <string name="new_collection">New collection</string>
-    <string name="new_pack">New pack</string>
-    <string name="new_card">New card</string>
+    <string name="collection_name">of filing box</string>
+    <string name="pack_name">of deck</string>
+    <string name="new_collection">New filing box</string>
+    <string name="new_pack">New deck</string>
+    <string name="new_card">New flashcard</string>
     <string name="new_card_front">front</string>
     <string name="new_card_back">back</string>
     <string name="new_card_notes">notes</string>
@@ -50,9 +55,9 @@
     <string name="change_back_front">show front</string>
     <string name="sort_random">sort randomly</string>
     <string name="sort_normal">sort by progress</string>
-    <string name="sort_alphabetical">sort alphabetical by card front</string>
-    <string name="collection_details">collection details</string>
-    <string name="pack_details">pack details</string>
+    <string name="sort_alphabetical">sort alphabetical by flashcard front</string>
+    <string name="collection_details">filing box details</string>
+    <string name="pack_details">deck details</string>
     <string name="card_plus">got it right</string>
     <string name="card_minus">got it wrong</string>
     <string name="card_known">progress</string>
@@ -61,9 +66,12 @@
     <string name="search">search</string>
     <string name="search_no_results">no search results</string>
     <string name="search_off">Reset search</string>
-    <string name="settings_default_sort">Card list: default sort</string>
+    <string name="settings_default_sort">Flashcard list: default sort</string>
     <string name="settings_format">Formatting</string>
-    <string name="settings_format_cards">Card front/back: Simple formatting</string>
+    <string name="settings_format_cards">Flashcard front/back: Simple formatting</string>
     <string name="settings_format_cards_info">***Text*** = Bold and italic\n**Text** = Bold\n*Text* = Italic\n_Text_ = Underline</string>
-    <string name="settings_format_card_notes">Card notes: Markdown support</string>
+    <string name="settings_format_card_notes">Flashcard notes: Markdown support</string>
+    <string name="settings_ui">Customize UI</string>
+    <string name="settings_ui_background_images">Show background images</string>
+    <string name="settings_ui_increase_font_size">Increase font size</string>
 </resources>
