--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -58,13 +58,28 @@
     <string name="collection_details">Karteikasten-Details</string>
     <string name="pack_details">Kartenstapel-Details</string>
     <string name="card_plus">Gewusst</string>
-    <string name="card_minus">Falsch gedacht</string>
+    <string name="card_minus">Nicht gewusst</string>
+    <string name="card_skip">Überspringen</string>
+    <string name="card_back">zurück</string>
     <string name="card_known">Fortschritt</string>
+    <string name="query_mode">Abfrage-Modus</string>
+    <string name="query_show">Lösung anzeigen</string>
+    <string name="query_notes">Notizen anzeigen</string>
+    <string name="query_notes_title">Karteikarten Notizen</string>
+    <string name="query_mode_exit">Abfrage-Modus verlassen?</string>
     <string name="color">Farbe</string>
     <string name="info">Infos</string>
     <string name="search">Suchen</string>
     <string name="search_no_results">Keine Suchergebnisse</string>
     <string name="search_off">Suche zurücksetzen</string>
+    <string name="advanced_search">Erweiterte Suche</string>
+    <string name="advanced_search_packs">Kartenstapel</string>
+    <string name="advanced_search_packs_all">Alle Kartenstapel</string>
+    <string name="advanced_search_packs_select">Kartenstapel auswählen</string>
+    <string name="advanced_search_progress">Lernfortschritt auswählen</string>
+    <string name="advanced_search_progress_greater">Größer gleich</string>
+    <string name="advanced_search_progress_less">Kleiner gleich</string>
+    <string name="advanced_search_progress_value">Lernfortschrittswert</string>
     <string name="settings_default_sort">Kartenliste: Standard-Sortierung</string>
     <string name="settings_format">Formatierung</string>
     <string name="settings_format_cards">Karteikarten-Vorder-/Rückseite: Einfache Formatierung</string>
@@ -73,4 +88,6 @@
     <string name="settings_ui">Nutzeroberfläche</string>
     <string name="settings_ui_background_images">Hintergrundbilder anzeigen</string>
     <string name="settings_ui_increase_font_size">Schriftgröße erhöhen</string>
+    <string name="settings_list">Karteikartenliste</string>
+    <string name="settings_list_no_update">Reihenfolge in offenen Listen nicht aktualisieren</string>
 </resources>
