simple stats for lists

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -72,6 +72,19 @@
     <string name="query_notes">Notizen anzeigen</string>
     <string name="query_notes_title">Karteikarten Notizen</string>
     <string name="query_mode_exit">Abfrage-Modus verlassen?</string>
+    <string name="list_stats">Listen-Statistiken</string>
+    <string name="list_stat_cards">Karteikarten</string>
+    <string name="list_stat_cards_total">Gesamt</string>
+    <string name="list_stat_progress_max">Höchster</string>
+    <string name="list_stat_progress_min">Niedrigster</string>
+    <string name="list_stat_progress_avg">Durchschnitt</string>
+    <string name="list_stat_progress_counter_percent">%</string>
+    <string name="list_stat_progress_counter_known_0">keiner</string>
+    <string name="list_stat_progress_counter_known_1">1</string>
+    <string name="list_stat_progress_counter_known_2">2</string>
+    <string name="list_stat_progress_counter_known_3">3</string>
+    <string name="list_stat_progress_counter_known_4">4</string>
+    <string name="list_stat_progress_counter_known_5">5+</string>
     <string name="color">Farbe</string>
     <string name="info">Infos</string>
     <string name="search">Suchen</string>
