Attach media to cards

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -6,6 +6,7 @@
     <string name="no">Nein</string>
     <string name="error">Fehler</string>
     <string name="error_values">Fehler – Haben Sie alle erforderlichen Felder ausgefüllt?</string>
+    <string name="success">Erfolgreich abgeschlossen</string>
     <string name="wait">Bitte warten</string>
     <string name="add">Einfügen</string>
     <string name="start">Starten</string>
@@ -14,6 +15,8 @@
     <string name="save_changes">Änderungen speichern</string>
     <string name="discard_changes">Änderungen verwerfen</string>
     <string name="delete">Löschen</string>
+    <string name="open">Öffnen</string>
+    <string name="share">Teilen</string>
     <string name="options">Optionen</string>
     <string name="welcome_collection">Willkommen. Erstellen Sie einen neuen Karteikasten (+) oder importieren Sie ein Karteikasten-Backup (↓).</string>
     <string name="welcome_pack">Es sind noch keine Kartenstapel in diesem Karteikasten vorhanden.</string>
@@ -36,8 +39,35 @@
     <string name="import_mode_duplicates">Als neuen gleichnamigen Eintrag hinzufügen</string>
     <string name="import_mode_integrate">Mit erstem gleichnamigen Karteikasten zusammenführen</string>
     <string name="import_export_include_settings">App-Einstellungen einschließen</string>
+    <string name="import_export_include_media">Medien-Referenzen einschließen</string>
+    <string name="import_export_include_media_warn_no_files">Die Sicherung enthält nur die Medien-Referenzen, nicht die Dateien selbst. Diese müssen Sie selbstständig sichern und wiederherstellen.</string>
+    <string name="import_export_include_media_warn_all_media">Die Sicherung enthält alle Medien-Referenzen, auch die nicht in diesem Karteikasten verwendeten.</string>
     <string name="edit_pack">Kartenstapel bearbeiten</string>
     <string name="edit_card">Karteikarte bearbeiten</string>
+    <string name="edit_card_media">Verknüpfte Medien verwalten</string>
+    <string name="edit_card_media_add">Medien hinzufügen</string>
+    <string name="no_media">Keine Medien</string>
+    <string name="media_missing">Medium verschollen (Datei nicht gefunden)</string>
+    <string name="media_missing_db">Medium verschollen (Kein Datenbankeintrag)</string>
+    <string name="media_missing_dialog">Medien fehlen</string>
+    <string name="media_missing_dialog_text">Abbrechen und fehlende Dateien begutachten?</string>
+    <string name="image_media">Bildmedien</string>
+    <string name="show_image_media">Bilder anzeigen</string>
+    <string name="show_all_media">Alle Medien anzeigen</string>
+    <string name="all_media">Alle Medien</string>
+    <string name="manage_media">Medien verwalten</string>
+    <string name="media_linked_cards">Verknüpfte Karteikarten</string>
+    <string name="media_no_card">Keine verknüpften Karteikarten gefunden. Medium löschen?</string>
+    <string name="select_folder_title">Ordner auswählen</string>
+    <string name="select_folder_help">Sie müssen einen Ordner auswählen, in dem diese App ihre Dateien speichern kann. Bitte wählen Sie einen Ordner exklusiv für diese App und sichern Sie diesen selbstständig. Auswahl jetzt setzen?</string>
+    <string name="select_folder_help_reselect">Ausgewählter Medien-Ordner ist nicht erreichbar. Ordner jetzt erneut auswählen?</string>
+    <string name="select_folder_help_db_entries">Datenbank enthält Medien-Einträge, aber es its kein Ordner ausgewählt. Den Ordner jetzt auswähen?</string>
+    <string name="file_exists">Eine Datei mit diesem Name existstiert im App Medien Ordner. Wie möchten Sie verfahren?</string>
+    <string name="file_exists_title">Datei vorhanden</string>
+    <string name="file_exists_action_link">Bestehende anstelle der ausgewählten Datei benutzen</string>
+    <string name="file_exists_action_new">Ausgewählte Datei umbenennen und kopieren</string>
+    <string name="delete_file_title">Datei löschen</string>
+    <string name="delete_file_info">Datenbankeintrag gelöscht. Auch Datei vom Dateisystem löschen?</string>
     <string name="delete_pack_with_cards">Dieser Kartenstapel enthält Karteikarten. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Karteikarten gelöscht. Trotzdem löschen?</string>
     <string name="delete_collection_with_packs">Dieser Karteikasten enthält Kartenstapel. Wenn Sie das Löschen fortsetzen, werden auch die enthaltenen Kartenstapel samt Karteikarten gelöscht. Trotzdem löschen?</string>
     <string name="move">Verschieben</string>
@@ -71,6 +101,8 @@
     <string name="query_show">Lösung anzeigen</string>
     <string name="query_notes">Notizen anzeigen</string>
     <string name="query_notes_title">Karteikarten Notizen</string>
+    <string name="query_media_image_title">Bilddateien</string>
+    <string name="query_media_all_title">Alle Mediendateien</string>
     <string name="query_mode_exit">Abfrage-Modus verlassen?</string>
     <string name="list_stats">Listen-Statistiken</string>
     <string name="list_stat_cards">Karteikarten</string>
